fixed layout issues with mobile

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -36,8 +36,12 @@ $events-bg-color: lighten($header-bg-color, 32%);
 $aspirants-bg-color: lighten($header-bg-color, 36%);
 
 #menu {
-  z-index: 1;
+  z-index: 100;
   background: $about-bg-color;
+  position: absolute;
+  width: 100%;
+  height: 5.9rem;
+  top: 0;
 
   > div[data-sticky-container] {
     z-index: 100;
@@ -58,6 +62,7 @@ $aspirants-bg-color: lighten($header-bg-color, 36%);
     position: relative;
     display: inline-block;
     border-radius: 0.5rem;
+    z-index: 999;
   }
 
   #link-to-about-container {
@@ -73,56 +78,58 @@ $aspirants-bg-color: lighten($header-bg-color, 36%);
   }
 }
 
-#about-container, #events-container, #aspirants-container {
-  font-size: 1.2em;
-  top: -5.9rem;
+#container {
+  // padding-top: 5.9rem;
   position: relative;
-  padding-top: 5.9rem;
-}
 
-#about-container {
-  height: 50vh;
-  background: $about-bg-color;
-}
+  #about-container, #events-container, #aspirants-container {
+    font-size: 1.2em;
+    // margin-top: -5.9rem;
+    // position: relative;
+    padding-top: 5.9rem;
+  }
 
-#events-container {
-  // height: 100vh;
-  background: $events-bg-color;
+  #about-container {
+    height: 50vh;
+    background: $about-bg-color;
+  }
 
-  article {
-    background-color: white;
-    border-radius: 2px;
-    padding: 2rem;
-    margin-bottom: 2rem;
+  #events-container {
+    background: $events-bg-color;
 
-    .orbit-container {
-      text-align: center;
-      background-color: rgba(10, 10, 10, 0.5);
+    article {
+      background-color: white;
+      border-radius: 2px;
+      padding: 2rem;
+      margin-bottom: 2rem;
 
-      @media #{$medium-up} {
-        .orbit-slide img {
-          height: 50vh;
-          width: auto;
+      .orbit-container {
+        text-align: center;
+        background-color: rgba(10, 10, 10, 0.5);
+
+        @media #{$medium-up} {
+          .orbit-slide img {
+            height: 50vh;
+            width: auto;
+          }
         }
       }
     }
   }
-}
 
-#aspirants-container {
-  height: 100vh;
-  background: $aspirants-bg-color;
+  #aspirants-container {
+    background: $aspirants-bg-color;
 
-  img.aspirant-thumb {
-    border: 1px solid #eee;
-    background: white;
-    padding: 0.5rem;
-    border-radius: 2px;
-    margin: 0.5rem;
-    box-shadow: 0 2px 2px rgba(0,0,0,0.1)
+    img.aspirant-thumb {
+      border: 1px solid #eee;
+      background: white;
+      padding: 0.5rem;
+      border-radius: 2px;
+      margin: 0.5rem;
+      box-shadow: 0 2px 2px rgba(0,0,0,0.1)
+    }
   }
 }
-
 
 @media #{$small-only} {
   header {
@@ -140,23 +147,38 @@ $aspirants-bg-color: lighten($header-bg-color, 36%);
     }
   }
 
-  .sticky-container {
-    display: block !important;
-  }
+  #container {
+    #menu {
+      position: relative;
+      height: 2.9rem;
+    }
 
-  #about-container, #events-container, #aspirants-container {
-    padding-top: 1rem;
-    top: 0;
-  }
+    .sticky-container {
+      display: block !important;
+    }
 
-  .orbit-slide img {
-    height: 30vh;
-    width: auto;
-  }
+    #about-container, #events-container, #aspirants-container {
+      padding-top: 1rem;
+      top: 0;
+      height: auto;
+    }
 
-  #events-container {
-    article {
-      padding: 1.0rem;
+    .orbit-slide img {
+      height: 30vh;
+      width: auto;
+    }
+
+    #events-container {
+      article {
+        padding: 1.0rem;
+      }
+    }
+
+    #aspirants-container {
+      img.aspirant-thumb {
+        margin: 0.2rem;
+        padding: 0.2rem;
+      }
     }
   }
 }
